--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -15,8 +15,7 @@ file.triple = triple.txt
 file.dictionary.entity = entity2id.txt
 file.dictionary.relation = relation2id.txt
 file.index = index.txt
-file.description = entity2plot.txt
-file.image = entity2poster.txt
+file.description = entity2json.txt
 
 file.vector.entity = entity2vec.bern
 file.vector.relation = relation2vec.bern
