Commit:  1. add sendBookmark and sendInteraction  2. update controller

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 dir = /Users/c.j./Desktop/Mexplorer/processed_dataset/
 model = TransE/
-index = Index/
+index = Index_feature/
 dimension = 100
 
 output.auto.size = 10
@@ -16,6 +16,8 @@ file.dictionary.entity = entity2id.txt
 file.dictionary.relation = relation2id.txt
 file.index = index.txt
 file.description = entity2json.txt
+file.bookmark.log = bookmark.log
+file.interaction.log = interaction.log
 
 file.vector.entity = entity2vec.bern
 file.vector.relation = relation2vec.bern
