Commit:  1. add Task and TaskManager  2. update sendInteraction and sendBookmark

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -16,6 +16,7 @@ file.dictionary.entity = entity2id.txt
 file.dictionary.relation = relation2id.txt
 file.index = index.txt
 file.description = entity2json.txt
+file.task = task.txt
 file.bookmark.log = bookmark.log
 file.interaction.log = interaction.log
 
