--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -17,8 +17,14 @@ file.dictionary.relation = relation2id.txt
 file.index = index.txt
 file.description = entity2json.txt
 file.task = task.txt
+
+
 file.bookmark.log = bookmark.log
 file.interaction.log = interaction.log
+file.user.log = user.log
 
 file.vector.entity = entity2vec.bern
 file.vector.relation = relation2vec.bern
+
+task.size = 2
+version.size = 3
