Commit:  1. update log

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -11,6 +11,9 @@ output.feature.size = 5
 direction.forward = 1
 direction.backward = -1
 
+task.size = 2
+version.size = 3
+
 file.triple = triple.txt
 file.dictionary.entity = entity2id.txt
 file.dictionary.relation = relation2id.txt
@@ -18,7 +21,7 @@ file.index = index.txt
 file.description = entity2json.txt
 file.task = task.txt
 
-
+dir.log = logs/
 file.bookmark.log = bookmark.log
 file.interaction.log = interaction.log
 file.user.log = user.log
@@ -26,5 +29,4 @@ file.user.log = user.log
 file.vector.entity = entity2vec.bern
 file.vector.relation = relation2vec.bern
 
-task.size = 2
-version.size = 3
+
