Commit:  1. update Assessor, Ranker, Task

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,32 +1,36 @@
 dir = /Users/c.j./Desktop/Mexplorer/processed_dataset/
+#dir = /home/ubuntu/data/processed_dataset/
 model = TransE/
-index = Index_feature/
+index = Index/
+index.feature = Index_feature/
+index.entity = Index_entity/
 dimension = 100
 
 output.auto.size = 10
 output.entity.size = 20
-output.relation.size = 10
+output.relation.size = 11
 output.feature.size = 5
 
 direction.forward = 1
 direction.backward = -1
-
-task.size = 2
-version.size = 3
 
 file.triple = triple.txt
 file.dictionary.entity = entity2id.txt
 file.dictionary.relation = relation2id.txt
 file.index = index.txt
 file.description = entity2json.txt
-file.task = task.txt
 
-dir.log = logs/
+file.vector.entity = entity2vec.bern
+file.vector.relation = relation2vec.bern
+
+file.task = task.txt
+task.size = 6
+version.size = 3
+
+dir.log = logs/facets/
 file.bookmark.log = bookmark.log
 file.interaction.log = interaction.log
 file.user.log = user.log
 
-file.vector.entity = entity2vec.bern
-file.vector.relation = relation2vec.bern
 
 
