Commit:  1. update conf.properties

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -23,7 +23,7 @@ file.description = entity2json.txt
 file.vector.entity = entity2vec.bern
 file.vector.relation = relation2vec.bern
 
-file.task = task.txt
+file.task = task_facet.txt
 task.size = 6
 version.size = 3
 
